# streamvault

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/enums/: __init__.py  item_type.py  job_status.py  job_type.py  scraped_type.py  show_type.py  validation_status.py
app/migrations/: env.py
app/migrations/versions/: 4104e0274dd2_add_streaming_api_models.py  4b6b35253fef_.py  538bc24b19b4_update_scraped_tables_schema_remove_fk_.py  708963fd497d_.py  7122ba21f393_add_origin_urls_to_shows.py  a5b87172c4fb_add_scraped_table.py  acc3f4953c2f_.py  bdb209c95047_add_jobs_table.py  c4c4c1257969_.py  d048f8ef2fce_.py  (+6 more)
app/models/: __init__.py  change.py  country.py  enums.py  genre.py  job.py  scraped.py  scraped_popular_show.py  scraped_show.py  scraped_top_show.py  service.py  show.py  streaming_option.py
app/routers/: jobs.py  scrape.py  scraped_show.py  shows.py  tmdb.py
app/schemas/: __init__.py  changes.py  common.py  countries.py  enums.py  genres.py  job.py  scrape.py  shows.py  tmdb.py  validation.py
app/services/: llm_service.py  queue_service.py  scheduler_service.py  scraper_service.py  shows_service.py  tmdb_service.py
app/workers/: cli.py  manager.py  scheduler_cli.py  worker.py
docker/: entrypoint.sh  ollama-entrypoint.sh
docker/loki/: loki-config.yml
docker/promtail/: promtail-config.yml
http/: health.http  jobs.http  scrape.http  shows.http
tests/: conftest.py
(+7 files in other folders)
