[project]
name = "streamvault"
version = "0.1.0"
description = "FastAPI starter project with async SQLAlchemy"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi>=0.123.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.30.0",
    "alembic>=1.17.2",
    "uvicorn[standard]>=0.34.0",
    "langchain>=1.1.0",
    "langchain-ollama>=1.0.0",
    "playwright>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.14.7",
    "ty>=0.0.1a29",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/migrations/env.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
